--- a/Physics2d/Jypeli.Physics2d.csproj
+++ b/Physics2d/Jypeli.Physics2d.csproj
@@ -14,6 +14,7 @@
     <PackageReleaseNotes>-Major update to .NET Core 3.0.
 -A lot of stuff may be broken.</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseFile>Jypeli.txt</PackageLicenseFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -42,6 +43,13 @@
 
   <ItemGroup>
     <Folder Include="Properties\" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Include="..\Licenses\Jypeli.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
