Created project template installer for windows

--- a/Projektimallit/DOTNetCoreWindows/Jypeli Projektimallit/Jypeli Projektimallit.csproj
+++ b/Projektimallit/DOTNetCoreWindows/Jypeli Projektimallit/Jypeli Projektimallit.csproj
@@ -49,7 +49,22 @@
     <Compile Include="Jypeli_ProjektimallitPackage.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ProjectTemplates\Tasohyppely.zip" />
+    <Content Include="ProjectTemplates\ConsoleMain.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="ProjectTemplates\Fysiikkapeli.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="ProjectTemplates\Peruspeli.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="ProjectTemplates\Tasohyppelypeli.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
