--- a/Jypeli/Jypeli.csproj
+++ b/Jypeli/Jypeli.csproj
@@ -25,7 +25,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;JYPELI;UseDouble;DESKTOP;DIRECTX;DISABLE_LIGHTING_EFFECT;DEBUG;NETCOREAPP;NETCOREAPP3_0</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;JYPELI;UseDouble;DESKTOP;DIRECTX;DISABLE_LIGHTING_EFFECT;NETCOREAPP;NETCOREAPP3_0;WINDOWS</DefineConstants>
     <Optimize>false</Optimize>
     <OutputPath>../Compiled</OutputPath>
   </PropertyGroup>
