--- a/testit/Tasohyppelypeli/Norsupeli/Tasohyppelypeli.csproj
+++ b/testit/Tasohyppelypeli/Norsupeli/Tasohyppelypeli.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;WINDOWS</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
