--- a/Projektimallit/DOTNetCoreWindows/Jypeli Projektimallit/Jypeli Projektimallit.csproj
+++ b/Projektimallit/DOTNetCoreWindows/Jypeli Projektimallit/Jypeli Projektimallit.csproj
@@ -65,6 +65,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="ProjectTemplates\ConsoleMainCore.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
