--- a/Projektimallit/DOTNetCoreWindows/Fysiikkapeli/Fysiikkapeli.csproj
+++ b/Projektimallit/DOTNetCoreWindows/Fysiikkapeli/Fysiikkapeli.csproj
@@ -9,9 +9,9 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' " />
 
   <ItemGroup>
-    <PackageReference Include="Jypeli.Core" Version="8.0.0" />
-    <PackageReference Include="Jypeli.Physics2d.Core" Version="1.4.0" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
+    <PackageReference Include="Jypeli.Core" Version="8.*" />
+    <PackageReference Include="Jypeli.Physics2d.Core" Version="1.4.*" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.*" />
   </ItemGroup>
 
 </Project>
