--- a/Projektimallit/DOTNetCoreWindows/Peruspeli/Peruspeli.csproj
+++ b/Projektimallit/DOTNetCoreWindows/Peruspeli/Peruspeli.csproj
@@ -11,7 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Jypeli.Core" Version="8.*" />
     <PackageReference Include="Jypeli.Physics2d.Core" Version="1.4.*" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.*" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
   </ItemGroup>
 
 </Project>
