--- a/Projektimallit/JetBrainsRider/Fysiikkapeli/Jypeli.Fysiikkapeli.nuspec
+++ b/Projektimallit/JetBrainsRider/Fysiikkapeli/Jypeli.Fysiikkapeli.nuspec
@@ -3,8 +3,8 @@
   <metadata>
     <id>Jypeli.Fysiikkapeli.Template</id>
     <version>1.0</version>
-    <authors>Mikko Röyskö</authors>
-    <owners>Mikko Röyskö</owners>
+    <authors>University of Jyväskylä</authors>
+    <owners>University of Jyväskylä</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Jypelin Fysiikkapeli-projektimalli</description>
   </metadata>
