--- a/Projektimallit/JetBrainsRider/Tasohyppely/content/Tasohyppelypeli/Tasohyppelypeli.csproj
+++ b/Projektimallit/JetBrainsRider/Tasohyppely/content/Tasohyppelypeli/Tasohyppelypeli.csproj
@@ -15,8 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jypeli.Core" Version="8.0.0" />
-    <PackageReference Include="Jypeli.Physics2d.Core" Version="1.4.0" />
+    <PackageReference Include="Jypeli.Core" Version="8.*" />
+    <PackageReference Include="Jypeli.Physics2d.Core" Version="1.4.*" />
     <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
   </ItemGroup>
 
