--- a/Jypeli/Jypeli.csproj
+++ b/Jypeli/Jypeli.csproj
@@ -8,7 +8,7 @@
     <AssemblyName>Jypeli</AssemblyName>
     <RootNamespace>Jypeli</RootNamespace>
     <PackageId>Jypeli.Core</PackageId>
-    <Version>8.0.2</Version>
+    <Version>8.0.3</Version>
     <Authors>University of Jyväskylä</Authors>
     <Company />
     <Product />
@@ -17,10 +17,10 @@
     <PackageProjectUrl>https://github.com/Jypeli-JYU/Jypeli</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Jypeli-JYU/Jypeli</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>-Major update to .NET Core 3.0.
--Now all platforms can use the same project files.
--Removed the need for Monogames content pipeline tool.
--A lot of stuff may be broken.</PackageReleaseNotes>
+    <PackageReleaseNotes>-Content can now also be loaded without specifying extension.
+ -Images are searched if they exist with .png, .jpg and .xnb-extensions.
+ -Sound with .wav, .mp3 and .xnb.
+ -text with .txt and .dat.</PackageReleaseNotes>
     <PackageLicenseFile>Jypeli.txt</PackageLicenseFile>
   </PropertyGroup>
 
