--- a/Projektimallit/DOTNetCoreWindows/Tasohyppelypeli/Tasohyppelypeli.csproj
+++ b/Projektimallit/DOTNetCoreWindows/Tasohyppelypeli/Tasohyppelypeli.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;netcoreapp3.0</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'" />
@@ -11,7 +11,6 @@
   <ItemGroup>
     <PackageReference Include="Jypeli.Core" Version="8.*" />
     <PackageReference Include="Jypeli.Physics2d.Core" Version="1.4.*" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
   </ItemGroup>
 
   <ItemGroup>
