--- a/Projektimallit/JetBrainsRider/Peruspeli/content/Peruspeli/Peruspeli.csproj
+++ b/Projektimallit/JetBrainsRider/Peruspeli/content/Peruspeli/Peruspeli.csproj
@@ -2,11 +2,10 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFrameworks>;netcoreapp3.1netcoreapp3.0</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;JYPELI;UseDouble;DESKTOP;DIRECTX;DISABLE_LIGHTING_EFFECT;DEBUG;NETCOREAPP;NETCOREAPP3_0</DefineConstants>
     <ExternalConsole>false</ExternalConsole>
   </PropertyGroup>
 
@@ -16,7 +15,6 @@
 
   <ItemGroup>
     <PackageReference Include="Jypeli.Core" Version="8.*" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
   </ItemGroup>
 
 </Project>
