--- a/Projektimallit/JetBrainsRider/ConsoleMain/Jypeli.ConsoleMain.nuspec
+++ b/Projektimallit/JetBrainsRider/ConsoleMain/Jypeli.ConsoleMain.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Jypeli.ConsoleMain.Template</id>
-    <version>1.0</version>
+    <version>1.1</version>
     <authors>University of Jyväskylä</authors>
     <owners>University of Jyväskylä</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
