--- a/Projektimallit/JetBrainsRider/Tasohyppely/content/Tasohyppelypeli/Tasohyppelypeli.csproj
+++ b/Projektimallit/JetBrainsRider/Tasohyppely/content/Tasohyppelypeli/Tasohyppelypeli.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1;netcoreapp3.0</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;netcoreapp3.0</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
