--- a/Jypeli/Jypeli.csproj
+++ b/Jypeli/Jypeli.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
     <AssemblyName>Jypeli</AssemblyName>
@@ -83,11 +83,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="Content\src\" />
     <Folder Include="Properties\" />
   </ItemGroup>
@@ -101,6 +96,14 @@
   
   <ItemGroup>
     <Compile Include="..\SpriteFontPlus\src\**\*.cs" LinkBase="SpriteFontPlus" />
-  <Compile Include="..\SpriteFontPlus\deps\SafeStbTrueTypeSharp\src\StbTrueTypeSharp\**\*.cs" LinkBase="SpriteFontPlus\StbTrueTypeSharp" />
+  <Compile Include="..\SpriteFontPlus\deps\SafeStbTrueTypeSharp\src\**\*.cs" LinkBase="SpriteFontPlus\StbTrueTypeSharp" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\MonoGame\MonoGame.Framework\MonoGame.Framework.DesktopGL.csproj" />
   </ItemGroup>
 </Project>
