Fixed MonoGame's dll embedding into Jypeli's nuget packages. This should be way easier, but according to StackOverflow it is not.

--- a/Physics2d/Jypeli.Physics2d.csproj
+++ b/Physics2d/Jypeli.Physics2d.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Jypeli\Jypeli.csproj" />
+    <ProjectReference Include="..\MonoGame\MonoGame.Framework\MonoGame.Framework.DesktopGL.csproj" PrivateAssets="All"/>
   </ItemGroup>
 
   <ItemGroup>
@@ -52,3 +53,4 @@
   </ItemGroup>
 
 </Project>
+
