--- a/testit/Tasohyppelypeli/Norsupeli/Tasohyppelypeli.csproj
+++ b/testit/Tasohyppelypeli/Norsupeli/Tasohyppelypeli.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Jypeli\Jypeli.csproj" />
+    <ProjectReference Include="..\..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.DesktopGL.csproj" />
     <ProjectReference Include="..\..\..\Physics2d\Jypeli.Physics2d.csproj" />
   </ItemGroup>
 
