--- a/Projektimallit/Jypeli.Templates/content/Fysiikkapeli/Fysiikkapeli.csproj
+++ b/Projektimallit/Jypeli.Templates/content/Fysiikkapeli/Fysiikkapeli.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+        <PublishReadyToRun>false</PublishReadyToRun>
+        <TieredCompilation>false</TieredCompilation>
     </PropertyGroup>
 
     <ItemGroup>
