Performance seems to be slightly better. Physicsengine still is absolutely horrible at generating garbage...

--- a/testit/Tasohyppelypeli/Norsupeli/Tasohyppelypeli.csproj
+++ b/testit/Tasohyppelypeli/Norsupeli/Tasohyppelypeli.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
+    <PublishReadyToRun>false</PublishReadyToRun>
+    <TieredCompilation>false</TieredCompilation>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
