--- a/FarseerPhysics/FarseerPhysics.csproj
+++ b/FarseerPhysics/FarseerPhysics.csproj
@@ -7,7 +7,7 @@
     <RootNamespace>Nez.Farseer</RootNamespace>
     <AssemblyName>Nez.FarseerPhysics</AssemblyName>
     <OutputType>Library</OutputType>
-    <TargetFramework>net471</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <IntermediateOutputPath>obj\Nez.FarseerPhysics\$(Configuration)</IntermediateOutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
@@ -22,10 +22,8 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\Nez.Portable\Nez.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.Portable" Version="3.7.1.189" PrivateAssets="all" />
+    <ProjectReference Include="..\Jypeli\Jypeli.csproj" />
+    <ProjectReference Include="..\MonoGame\MonoGame.Framework\MonoGame.Framework.DesktopGL.csproj" />
   </ItemGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 </Project>
