--- a/FarseerPhysics/FarseerPhysics.csproj
+++ b/FarseerPhysics/FarseerPhysics.csproj
@@ -1,15 +1,9 @@
 ﻿<Project>
-  <PropertyGroup>
-    <BaseIntermediateOutputPath>obj\$(MSBuildProjectName)</BaseIntermediateOutputPath>
-  </PropertyGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <PropertyGroup>
-    <RootNamespace>Nez.Farseer</RootNamespace>
-    <AssemblyName>Nez.FarseerPhysics</AssemblyName>
+    <AssemblyName>Jypeli.FarseerPhysics</AssemblyName>
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <IntermediateOutputPath>obj\Nez.FarseerPhysics\$(Configuration)</IntermediateOutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   
