--- a/testit/TasohyppelypeliFarseer/Norsupeli/Tasohyppelypeli.csproj
+++ b/testit/TasohyppelypeliFarseer/Norsupeli/Tasohyppelypeli.csproj
@@ -14,9 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\FarseerPhysics\FarseerPhysics.csproj" />
     <ProjectReference Include="..\..\..\Jypeli\Jypeli.csproj" />
     <ProjectReference Include="..\..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.DesktopGL.csproj" />
-    <ProjectReference Include="..\..\..\Physics2d\Jypeli.Physics2d.csproj" />
   </ItemGroup>
 
   <ItemGroup>
